# gitlytics

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  process_csv.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  publish.yml
.streamlit/: config.toml
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/public/: robots.txt  sitemap.xml
dashboard/src/: index.css  main.tsx
dashboard/src/components/: BestDayCard.tsx  BestTimeCard.tsx  CardModal.tsx  CategoryBadge.tsx  CloneLeaderboard.tsx  CommitActivity.tsx  CompareModal.tsx  CumulativeGrowth.tsx  DashboardToolbar.tsx  DashboardView.tsx  DeepDiveAdvanced.tsx  ExportHistory.tsx  ExportModal.tsx  ExportOverlay.tsx  FreshnessPill.tsx  GlobalReferrers.tsx  HnRedditBanner.tsx  IssuesPrsCard.tsx  KeyboardHelp.tsx  LanguageDistribution.tsx  LanguagePill.tsx  LifetimeHero.tsx  LoadingScreen.tsx  LoginView.tsx  MetricsGrid.tsx  MomentumPill.tsx  RepoFilter.tsx  RepoTable.tsx  SpikeBanner.tsx  StatusPills.tsx  TopNavPills.tsx  TopicTags.tsx  TrafficCharts.tsx  TrafficHeatmap.tsx  UsernameView.tsx  WeeklyDigestCard.tsx  Wordmark.tsx
dashboard/src/hooks/: use-export-state.ts
dashboard/src/lib/: analytics.ts  demo-data.ts  export-history.ts  exports.ts  github-api.ts  github-public.ts
dashboard/src/pages/: DashboardPage.tsx
github_traffic/: cli.py  dashboard.py
github_traffic/frontend/src/components/: Landing.jsx
src/gitlytics/: __init__.py  api.py  automation.py  cli.py  core.py  process.py
src/gitlytics/static/: _headers  index.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml
src/gitlytics/static/assets/: CardModal-9oHMecdc.js  CardModal-BMio-Yhe.js  CardModal-C59MkcBx.js  CardModal-CFDo4j41.js  CardModal-DxZR1C74.js  CardModal-Dy49DNK_.js  ExportModal-BiWrvopk.js  ExportModal-DWxnCk_u.js  ExportModal-HdxhYxeV.js  ExportModal-IHMKGr40.js  ExportModal-M_KmGZ_C.js  ExportModal-TgUqez0T.js  exports-BF2NaQfQ.js  exports-CBIW6Z6w.js  exports-CRz2A0EU.js  exports-DpDv9zsR.js  exports-tX5f7Gg7.js  html2canvas-pro.esm-9xys3ejh.js  index--VQuQ1On.css  index-BWswdym7.js  index-Bi9mu2Wz.js  index-Bro5YaCJ.css  index-CEcch8Fa.css  index-CKvtJz1x.js  index-CSjcErui.js  index-Cx6oOScf.js  index-D1hM33GO.css  index-DJlrh7aF.js  index-DRUIdkFE.js  index-DxtMptVs.css  index-wOhawfKi.js  index.es-BArdAPDI.js  index.es-BiXucK_1.js  index.es-BpixEfNZ.js  index.es-BqDD_idA.js  index.es-CybPOorM.js  index.es-DZq7ceO3.js  index.es-Dsx-ECMQ.js  index.es-tlOthHFQ.js  jspdf.es.min-BPbddhZq.js  (+7 more)
tests/: conftest.py  live_automation.py  live_username.py  test_api.py  test_automation.py  test_cli.py  test_core.py  test_process.py  test_star_history.py  test_username.py
