[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-traffic-monitor"
version = "0.1.1"
description = "Monitor and automate your GitHub repository traffic analytics."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "pandas",
    "python-dotenv"
]
keywords = [
    "github",
    "traffic",
    "analytics",
    "automation",
    "cli"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.35.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0"
]

[project.scripts]
github-traffic-monitor = "github_traffic.cli:main"

[tool.setuptools.packages.find]
include = ["github_traffic*"]
