[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlytics"
version = "0.4.4"
description = "Monitor and automate your GitHub repository traffic analytics."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ameya Chopade", email = "ameyaccod171@gmail.com" }
]
# Fix #20: Add version lower-bounds to prevent silent breakage on old environments.
# These match the constraints already documented in requirements.txt.
# python-dotenv was removed from runtime deps — the library never reads .env;
# only tests use it, so it lives in the [dev] extra below.
dependencies = [
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "croniter>=2.0.0"
]
keywords = [
    "github",
    "traffic",
    "analytics",
    "automation",
    "cli"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://gitlytics.dev"
Documentation = "https://docs.gitlytics.dev"
Repository = "https://github.com/ameyac11/gitlytics"
"Bug Tracker" = "https://github.com/ameyac11/gitlytics/issues"

[project.optional-dependencies]
# Fix #20: dashboard extras are optional — base package works without them.
# requirements.txt was including them as mandatory; that was wrong.
dashboard = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9"
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",      # required by FastAPI TestClient (used in test_api.py)
    "anyio[trio]>=4.0.0", # async test support
    "python-dotenv>=1.0.1"  # only tests load .env — runtime package doesn't
]


[project.scripts]
gitlytics = "gitlytics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gitlytics*"]

[tool.setuptools.package-data]
"gitlytics" = ["static/**/*", "static/*"]

[tool.pytest.ini_options]
# Only collect files that match the offline test naming convention.
# live_*.py scripts are excluded — they need a real GitHub token.
testpaths = ["tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
